Fix verticle align issue present in non-Chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ img {
     float: none;
     padding-left:0px;
     padding-right:0px;
+    vertical-align: top;
 }
 
 .main-content.no-float {
